objects/CartItem.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>The Amount for the single item record</inlineHelpText>
        <label>Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    
    <fields>
        <fullName>List_Price__c</fullName>
        <inlineHelpText>The original amount of the product before any discount.</inlineHelpText>
        <label>List Price</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>The total number of items to be included into the cart</inlineHelpText>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>